log
Thu 21 Mar 2024 06:51:19 PM UTC: 
 tests:  0|5
total_score: 0/70
e0e434b
Thu 21 Mar 2024 06:54:26 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:53:19: error: invalid type argument of unary ‘*’ (have ‘int’)
   53 |       pushBack(L, *arreglo[i]);
      |                   ^~~~~~~~~~~
Compilation failed
f0e34fe
Thu 21 Mar 2024 06:54:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
51642a5
Thu 21 Mar 2024 06:57:29 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:13: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |   int aux = first(L);
      |             ^~~~~
exercises.c:67:14: error: comparison between pointer and integer [-Werror]
   67 |   while (aux != NULL)
      |              ^~
exercises.c:69:16: error: invalid type argument of unary ‘*’ (have ‘int’)
   69 |       suma += (*aux);
      |                ^~~~
exercises.c:70:11: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   70 |       aux = next(L);
      |           ^
cc1: all warnings being treated as errors
Compilation failed
eb2732a
Thu 21 Mar 2024 06:57:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
2149226
Thu 21 Mar 2024 06:59:34 PM UTC: 
 exercises.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
5f641fd
Thu 21 Mar 2024 07:04:40 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:120:11: error: expected ‘)’ before ‘largo’
  120 |   while (i largo / 2)
      |         ~ ^~~~~~
      |           )
exercises.c:123:55: error: suggest parentheses around comparison in operand of ‘==’ [-Werror=parentheses]
  123 |       if (cadena[i] + 1 == cadena[j] || cadena[i] + 2 == cadena[j] == cadena[j]) i++;
      |                                         ~~~~~~~~~~~~~~^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
200979d
Thu 21 Mar 2024 07:05:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:120:11: error: expected ‘)’ before ‘largo’
  120 |   while (i largo / 2)
      |         ~ ^~~~~~
      |           )
Compilation failed
8a39162
Thu 21 Mar 2024 07:05:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|2
total_score: 40/70
560ea00
Thu 21 Mar 2024 08:05:31 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  0|0
814d31f
Thu 21 Mar 2024 08:07:05 PM UTC: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  5|1
total_score: 50/70
2f0c827
Thu 21 Mar 2024 08:07:57 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:137:7: error: ‘size’ undeclared (first use in this function)
  137 |   if (size % 2 != 0) return 0;
      |       ^~~~
exercises.c:137:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b62aa39
Thu 21 Mar 2024 08:08:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|0
total_score: 70/70
e9b1a61
